fix letter spacing in header

--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ h1 {
   font-size: 48px;
   color: #0083c6;
   text-transform: uppercase;
-  letter-spacing: 0.5em;
+  letter-spacing: 0.05em;
 }
 
 h2 { 
